--- a/Src/TODO.txt
+++ b/Src/TODO.txt
@@ -3,3 +3,4 @@
 * Rename libgcc...dll
 * Static version of ntcompat needed
 * CMake not using ntcompat yet
+* SSH does not pass keyboard input to plink, so you have to do `plink git@github.com` to press Y.
