--- a/Src/TODO.txt
+++ b/Src/TODO.txt
@@ -4,3 +4,25 @@
 * Static version of ntcompat needed
 * CMake not using ntcompat yet
 * SSH does not pass keyboard input to plink, so you have to do `plink git@github.com` to press Y.
+* Curl: USE_LIBIDN2, USE_WIN32_IDN, USE_NGHTTP2, USE_NGTCP2, USE_QUICHE, CURL_BROTLI, CURL_ZSTD
+
+gettext?
+
+svn
+tortoisegit
+tortoisesvn
+
+md5sum, sha1sum, etc.
+readline
+
+windjview
+nero?
+blender
+
+opera 10
+imagemagick?
+
+dns tools
+
+dos2unix
+unix2dos
